horizontal scroll 351px fixed 2 :)

--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -28,5 +28,6 @@
     .places__image {
         grid-column: span 3;
         grid-row: 3;
+        justify-self: center;
     }    
 }
